2007-10-08  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        (nautilus_file_peek_display_name):
	Use a display name based on the filename as the default instead
	of "" before we've read the real display name from the backend.

2007-10-08  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-icon-dnd.[ch]:
	* src/nautilus-emblem-sidebar.c:
	* src/nautilus-location-bar.c:

	Replace nautilus_icon_dnd_uri_list_extract_uris with
	g_uri_list_extract_uris.

2007-10-08  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-bookmark-list.[ch]: port to gio.

2007-10-05  Paolo Borelli  <pborelli@katamail.com>

	* configure.in: use gio-2.0 instead of gio-standalone.

2007-10-04  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-trash-directory.[ch]:
        * libnautilus-private/nautilus-trash-file.[ch]:
	Remove virtual trash locations, we now use the gvfs trash:
	
        * libnautilus-private/nautilus-trash-monitor.[ch]:
	Make this a stub for now. Need to figure out how to do this.
	
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-file.c:
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-window-manage-views.c:
	Handle the removal of NautilusTrash*

2007-10-04  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-thumbnails.c:
	Use gio instead of gnome-vfs to get mtime

2007-10-02  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-customization-data.c:
        * libnautilus-private/nautilus-customization-data.h:
        * src/nautilus-property-browser.c:
	Use gio to read info

2007-10-02  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-dnd.c (selection_is_image_file):