@@ -49,7 +49,7 @@ nautilus_monitor_active (void)
 
 	if (tried_monitor == FALSE) {	
 		file = g_file_new_for_path (g_get_home_dir ());
-		dir_monitor = g_file_monitor_directory (file, G_FILE_MONITOR_FLAGS_NONE);
+		dir_monitor = g_file_monitor_directory (file, G_FILE_MONITOR_FLAGS_NONE, NULL);
 		g_object_unref (file);
 		
 		monitor_success = (dir_monitor != NULL);
@@ -128,7 +128,7 @@ nautilus_monitor_directory (GFile *location)
 	GDirectoryMonitor *dir_monitor;
 	NautilusMonitor *ret;
 
-	dir_monitor = g_file_monitor_directory (location, G_FILE_MONITOR_FLAGS_MONITOR_MOUNTS);
+	dir_monitor = g_file_monitor_directory (location, G_FILE_MONITOR_FLAGS_MONITOR_MOUNTS, NULL);
 
 	if (dir_monitor == NULL) {
 		return NULL;
