@@ -1,3 +1,13 @@
+2007-10-10  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-utilities.c:
+        * libnautilus-private/nautilus-monitor.c:
+        * src/nautilus-bookmark-list.c:
+	Update for file monitoring API change
+	
+        * src/nautilus-spatial-window.c:
+	Gio port from Paolo Borelli
+	
 2007-10-08  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file.c:
